fixing reenc 1 of L

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ elgamal = {git = "https://github.com/ZenGo-X/rust-elgamal"}
 #elgamal = {path = "/Users/doronz/Dropbox/rustProjects/zengo_libs/rust-elgamal"}
 rand = "0.6"
 
-#vice-city = {git = "https://github.com/ZenGo-X/vice-city"}
-vice-city = {path = "/Users/doronz/Dropbox/rustProjects/zengo_libs/vice-city"}
+vice-city = {git = "https://github.com/ZenGo-X/vice-city"}
+#vice-city = {path = "/Users/doronz/Dropbox/rustProjects/zengo_libs/vice-city"}
